# dyamic-weight-grafting

./: .gitignore  Makefile  README.md  api.py  callbacks.py  config.py  config_data_generation.yaml  config_data_templated.yaml  config_data_wars.yaml  config_train.yaml  config_train_wars.yaml  constants.py  create_dataset.py  create_dataset_v3.py  create_datasets.py  dataset-generation.ipynb  environment.yaml  environment.yml  eval.ipynb  eval.py  nnsight.ipynb  pyproject.toml  train.ipynb  train.py  train.slurm  train_v2.py  utils_train.py
data_templates/battles/: article_templates_battles.jsonl  battles_correct.jsonl  lm_A2B_templates.jsonl  lm_B2A_templates.jsonl  qa_A2B_templates.jsonl  qa_B2A_templates.jsonl  qa_templates_battles.jsonl
data_templates/fake_movies/: lm_templates.jsonl  qa_templates.jsonl
data_templates/fake_movies_fake_actors/: lm_templates.jsonl
data_templates/fake_movies_real_actors/: qa_templates.jsonl  real_actors.jsonl
data_templates/movies_small/: article_templates.jsonl  fictional_movies.jsonl  raw_fictional.jsonl  raw_known.jsonl
data_templates/real_movies_real_actors/: metadata.jsonl
data_templates/wars/: article_templates_wars.jsonl  (+3 more)
notebooks/: eval.ipynb  experiments.ipynb  experiments_v2.ipynb  experiments_vizzes.ipynb  nnsight.ipynb  plotting.ipynb  real_movies.ipynb  svd.ipynb  wars.ipynb
slurm/: analyze_experiment.slurm  analyze_experiments.slurm  create_datasets.slurm  experiments.slurm  run_experiment.slurm  run_experiments.slurm  submit_experiment_sweep.py  submit_job_sweep.py  submit_train_sweep.py  train.slurm
(+58 files in other folders)
