[project]
name = "kg"
version = "0.1.0"
description = "Code for running supervised fine-tuning experiments exploring which model parameters store relationship information."
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"